--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "fastapi>=0.129.0",
+    "sqlalchemy>=2.0.46",
     "uvicorn[standard]>=0.41.0",
 ]
