--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "bcrypt>=5.0.0",
     "fastapi>=0.129.0",
     "sqlalchemy>=2.0.46",
     "uvicorn[standard]>=0.41.0",
