--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "bcrypt>=5.0.0",
     "fastapi>=0.129.0",
+    "pyjwt>=2.11.0",
     "sqlalchemy>=2.0.46",
     "uvicorn[standard]>=0.41.0",
 ]
