--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "bcrypt>=5.0.0",
     "fastapi>=0.129.0",
     "pyjwt>=2.11.0",
+    "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.22",
     "sqlalchemy>=2.0.46",
     "uvicorn[standard]>=0.41.0",
 ]
